# wasm-submemory

./: Cargo.toml
examples/: rewrite.rs
src/: lib.rs  main.rs
testdata/: build.sh
testdata/c/: data.c
testdata/rust/: allocation.rs  data.rs
testdata/wasm/c/: data.wasm  i32_counter.wasm
testdata/wasm/rust/: allocation.wasm  data.wasm  f32_counter.wasm
testdata/wasm/zig/: allocation.wasm  data.wasm  f32_counter.wasm  i32_counter.wasm
testdata/zig/: allocation.zig  data.zig  i32_counter.zig
tests/: allocation.rs  basic.rs  counter.rs  data.rs  memory_size.rs  wasm_global.rs
tests/common/: mod.rs
wasm/: build.sh  c_f32_counter.c  c_f32_counter.wasm  c_i32_counter.c  rust_f32_counter.rs  test1.rs  test1.wasm  zig_f32_counter.zig
